Updated Data API with tests and fixes.
Updated Data API with additonal factory methods for combining sources,
identity, etc. Updated Pipe with accessors to sources and sinks, as well
as utility withSources and linkTo methods.

Various fixes including cached processing without sources, and improving
sink lifecycle and validation.